--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -26,6 +26,7 @@
 @use "./pages/Home/bestseller";
 
 // Header page
+@use "./components/Header/topBar";
 @use "./components/Header/_brushsetsAndAccessories";
 @use "./components/Header/brushes";
 @use "./components/Header/faceEyeLips";
