--- a/src/sass/pages/_checkout.scss
+++ b/src/sass/pages/_checkout.scss
@@ -20,7 +20,6 @@
           .basketIcon {
             width: 24px;
             height: 24px;
-            color: rgb(209, 151, 162);
             position: absolute;
             right: 40px;
             cursor: pointer;
@@ -160,16 +159,17 @@
             margin-top: 15px;
             margin-bottom: 20px;
           }
+
           .paymentMethods {
             border: 1px solid rgb(224, 219, 219);
             border-radius: 5px;
+
             .cartDetails {
-              background-color: #faf5f6;
+              cursor: pointer;
               display: flex;
               flex-direction: column;
               justify-content: space-between;
               padding: 13px;
-              border-bottom: 1px solid rgb(224, 219, 219);
               border-top-left-radius: 4px;
               border-top-right-radius: 4px;
               .creditCard {
@@ -188,6 +188,7 @@
                 .carts {
                   display: flex;
                   gap: 7px;
+                  position: relative;
                   img {
                     width: 38px;
                     height: 24px;
@@ -198,16 +199,52 @@
                     background-color: #000;
                     border-radius: 3px;
                     &:hover {
+                      .uniPayLogo {
+                        opacity: 1;
+                      }
                       background-color: #000000da;
                       cursor: pointer;
+                    }
+                    p {
+                      font-size: 13px;
+                      color: #807e7e;
+                    }
+                  }
+                  .uniPayLogo {
+                    position: absolute;
+                    right: -4px;
+                    bottom: 32px;
+                    background-color: #000;
+                    padding: 6px;
+                    border-radius: 5px;
+                    opacity: 0;
+                    transition: opacity 0.2s ease-in-out;
+                    cursor: pointer;
+                    img {
+                      width: 38px;
+                      height: 24px;
+                    }
+                    &::after {
+                      content: "";
+                      position: absolute;
+                      bottom: -7px;
+                      left: 50%;
+                      transform: translateX(-50%);
+                      width: 0;
+                      height: 0;
+                      border-left: 5px solid transparent;
+                      border-right: 5px solid transparent;
+                      border-top: 7px solid #000000;
                     }
                   }
                 }
               }
             }
+
             .creditCardActive {
               background-color: #f4f4f4;
               border-bottom: 1px solid rgb(224, 219, 219);
+              border-top: 1px solid rgb(224, 219, 219);
               .cardActiveContainer {
                 padding: 17px;
                 .cardActive {
@@ -233,14 +270,55 @@
                     font-size: 14px;
                   }
                 }
+                .billing {
+                  max-height: 0;
+                  overflow: hidden;
+                  opacity: 0;
+                  transition: max-height 0.5s ease-in-out,
+                    opacity 0.5s ease-in-out;
+                }
+                .billing.visible {
+                  max-height: 500px;
+                  opacity: 1;
+                }
+
+                .billing.hidden {
+                  max-height: 0;
+                  opacity: 0;
+                }
               }
             }
+            .creditCardActive,
+            .paypalActive {
+              background-color: #f4f4f4;
+              border: 1px solid rgb(224, 219, 219);
+              border-radius: 4px;
+              max-height: 0;
+              overflow: hidden;
+              opacity: 0;
+              transition: max-height 0.5s ease-in-out, opacity 0.5s ease-in-out;
+            }
+
+            .creditCardActive.visible,
+            .paypalActive.visible {
+              max-height: 740px;
+              opacity: 1;
+            }
+
+            .creditCardActive.hidden,
+            .paypalActive.hidden {
+              max-height: 0;
+              opacity: 0;
+            }
+
             .paypalDetails {
               display: flex;
               justify-content: space-between;
               padding: 13px;
               border-bottom-left-radius: 4px;
               border-bottom-right-radius: 4px;
+              border-top: 1px solid rgb(224, 219, 219);
+              cursor: pointer;
               .cartDetail {
                 display: flex;
                 gap: 15px;
@@ -255,6 +333,10 @@
                 height: 21px;
               }
             }
+            .hidden {
+              display: none;
+            }
+
             .paypalActive {
               display: flex;
               flex-direction: column;
@@ -262,7 +344,7 @@
               align-items: center;
               text-align: center;
               margin: 0 auto;
-              padding: 30px;
+              height: 200px;
               background-color: #f4f4f4;
               border-bottom-right-radius: 4px;
               border-bottom-left-radius: 4px;
@@ -358,6 +440,7 @@
               height: 17px;
             }
           }
+
           .payBtn {
             width: 100%;
             height: 52px;
@@ -398,6 +481,7 @@
               height: 24px;
             }
           }
+
           .end {
             border-top: 1px solid rgb(224, 219, 219);
             margin-top: 60px;
@@ -489,6 +573,11 @@
               font-size: 14px;
               color: #535353;
               font-weight: 800;
+              cursor: pointer;
+              .filled {
+                background-color: #000;
+                color: #fff;
+              }
             }
           }
           .subtotal {
@@ -519,7 +608,7 @@
             }
           }
           .total {
-            margin-top: 15px;
+            margin-top: 25px;
             display: flex;
             justify-content: space-between;
             align-items: center;
