--- a/src/sass/components/Header/_header.scss
+++ b/src/sass/components/Header/_header.scss
@@ -7,6 +7,7 @@ header {
   transition: transform 0.3s ease-in-out;
   z-index: 1000;
   padding-bottom: 20px;
+  border-bottom: 1px solid rgb(216, 214, 214);
   &.hidden {
     transform: translateY(-100%);
   }
