--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -33,6 +33,7 @@
 @use "./pages/CartDetails/comments";
 @use "./pages/CartDetails/wirEmpfehlenAuch";
 @use "./pages/CartDetails/kurzlichAngesehen";
+@use "./pages/CartDetails/gutzuwissen";
 
 // Header page
 @use "./components/Header/topBar";
